# OpenSpace

./: .clang-format  .clang_tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  ACKNOWLEDGMENTS.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS  CREDITS.md  Directory.Build.Template.props  Documentation.html  Doxyfile  GUI.diff  Jenkinsfile  LICENSE  LICENSE.md  README.md  REMOTEME.BAT  RUNLOGGING.BAT  RUNMRV.BAT  THIRD_PARTY_LICENSES.md  deploy.bat  libgdal.dylib  mrv-20170721-01-child-default.cfg  mrv-20170721-01-child-front.cfg  mrv-20170721-01-child-reduced.cfg  mrv-20170721-01-leaf-default.cfg  mrv-20170721-01-leaf-front.cfg  mrv-20170721-01-leaf-reduced.cfg  mrv-20170721-01-opacity-default.cfg  mrv-20170721-01-opacity-front.cfg  mrv-20170721-01-opacity-reduced.cfg  mrv-20170721-01-sand-default.cfg  (+51 more)
apps/: CMakeLists.txt
apps/AssetBuilder/: CMakeLists.txt  include.cmake  main.cpp  nova.rc  openspace.rc
apps/DataConverter/: CMakeLists.txt  conversiontask.h  main.cpp  milkywayconversiontask.cpp  milkywayconversiontask.h  milkywaypointsconversiontask.cpp  milkywaypointsconversiontask.h
apps/DocsWriter/: CMakeLists.txt  main.cpp
apps/Launcher/: CMakeLists.txt  files.qrc  informationwidget.cpp  informationwidget.h  infowidget.cpp  infowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  shortcutwidget.cpp  shortcutwidget.h  syncwidget.cpp  syncwidget.h
apps/OpenSpace/: CMakeLists.txt  main.cpp
apps/OpenSpace-MinVR/: CMakeLists - Copy.txt  CMakeLists.txt  include.cmake  main.cpp  openspace.icns
apps/Sync/: CMakeLists.txt  main.cpp  nova.rc  openspace.icns  openspace.rc
apps/TaskRunner/: CMakeLists.txt  main.cpp
apps/TimelineView/: CMakeLists.txt  common.h  configurationwidget.cpp  configurationwidget.h  controlwidget.cpp  controlwidget.h  informationwidget.cpp  informationwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  timelinewidget.cpp  timelinewidget.h
apps/Wormhole/: CMakeLists.txt  main.cpp
apps/boost_1_64_0/: index.html
ext/: CMakeLists.txt  FindSGCT.cmake  tinythread.cpp  tinythread.h
ext/lua/: CMakeLists.txt
ext/osc/: CMakeLists.txt
ext/spice/: CMakeLists.txt
ext/vld/: vld_def.h
gui/luascriptexternalcontrol/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
gui/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/timelineview/: CMakeLists.txt  common.h  configurationwidget.cpp  configurationwidget.h  controlwidget.cpp  controlwidget.h  informationwidget.cpp  informationwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  timecontrolwidget.cpp  timecontrolwidget.h  timelinewidget.cpp  timelinewidget.h
modules/: CMakeLists.txt
modules/advancedatmosphere/: CMakeLists.txt  advancedatmospheremodule.cpp  advancedatmospheremodule.h
modules/airtraffic/: .gitignore  CMakeLists.txt  airtrafficmodule.cpp  airtrafficmodule.h
modules/atmosphere/: CMakeLists.txt  atmospheremodule.cpp  atmospheremodule.h  include.cmake
modules/audio/: CMakeLists.txt  audiomodule.cpp  audiomodule.h  audiomodule_lua.inl
modules/autonavigation/: CMakeLists.txt  atnodenavigator.cpp  atnodenavigator.h  autonavigationhandler.cpp  autonavigationhandler.h  autonavigationmodule.cpp  autonavigationmodule.h  autonavigationmodule_lua.inl  avoidcollisioncurve.cpp  avoidcollisioncurve.h  camerastate.cpp  camerastate.h  helperfunctions.cpp  helperfunctions.h  include.cmake  instruction.cpp  instruction.h  path.cpp  path.h  pathcreator.cpp  pathcreator.h  pathcurve.cpp  pathcurve.h  pathcurves.cpp  pathcurves.h  pathinstruction.cpp  pathinstruction.h  pathnavigationhandler.cpp  pathnavigationhandler.h  pathsegment.cpp  pathsegment.h  pathspecification.cpp  pathspecification.h  rotationinterpolator.cpp  rotationinterpolator.h  speedfunction.cpp  speedfunction.h  transferfunctions.cpp  transferfunctions.h  waypoint.cpp  (+3 more)
modules/base/: CMakeLists.txt  basemodule.cpp  basemodule.h  include.cmake
modules/blackhole/: CMakeLists.txt  blackholemodule.cpp  blackholemodule.h
modules/cefwebgui/: CMakeLists.txt  cefwebguimodule.cpp  cefwebguimodule.h  include.cmake
modules/climate/: CMakeLists.txt  climatemodule.cpp  climatemodule.h
modules/common/: common.xml
modules/cosmiclife/: CMakeLists.txt  cosmiclifemodule.cpp  cosmiclifemodule.h
modules/dataloader/: CMakeLists.txt  dataloadermodule.cpp  dataloadermodule.h  dataloadermodule_lua.inl  helpers.cpp  helpers.h  loader.cpp  loader.h  reader.cpp  reader.h  writer.h
modules/datasurface/: CMakeLists.txt  datasurfacemodule.cpp  datasurfacemodule.h
modules/debugging/: CMakeLists.txt  debuggingmodule.cpp  debuggingmodule.h  debuggingmodule_lua.inl
modules/digitaluniverse/: CMakeLists.txt  digitaluniversemodule.cpp  digitaluniversemodule.h
modules/dsn/: CMakeLists.txt  dsnmodule.cpp  (+2 more)
src/: CMakeLists.txt  camera.h  deviceidentifier.cpp  deviceidentifier.h  interactionhandler.cpp  interactionhandler.h  main.cpp  object.cpp  object.h  openspace.cpp  openspaceengine.cpp  openspaceengine.h  renderable.cpp  renderable.h  renderablebody.cpp  renderableplanet.cpp  renderengine.cpp  renderengine.h
tests/: CMakeLists.txt  basicvolume.rawvolume  main.cpp  test_aabb.inl  test_angle.inl  test_assetloader.cpp  test_assetloader.inl  test_chunknode.inl  test_common.inl  test_concurrentjobmanager.cpp  test_concurrentjobmanager.inl  test_concurrentqueue.cpp  test_concurrentqueue.inl  test_configuration.cpp  test_configurationmanager.inl  test_convexhull.inl  test_distanceconversion.cpp  test_documentation.cpp  test_documentation.inl  test_ellipsoid.inl  test_gdalwms.inl  test_horizons.cpp  test_iswamanager.cpp  test_iswamanager.inl  test_jsonformatting.cpp  test_kepler.cpp  test_latlonpatch.cpp  test_latlonpatch.inl  test_lrucache.cpp  test_lrucache.inl  test_lua_createsinglecolorimage.cpp  test_lua_property.cpp  test_lua_propertyvalue.cpp  test_lua_setpropertyvalue.cpp  test_luaconversions.cpp  test_luaconversions.inl  test_optionproperty.cpp  test_optionproperty.inl  test_patchcoverageprovider.inl  test_powerscalecoordinates.inl  (+25 more)
(+19931 files in other folders)
